<resources>
    <!-- Strings placeholder and values -->
    <string name="app_name">Register and Login</string>
    <string name="text_name">Welcome to my app</string>
    <string name="splash">Register and Login</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="homeImage">homeImage</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email</string>
    <string name="pswd">Password</string>
</resources>
