<?xml version="1.0" encoding="utf-8"?>
<!-- Created ScrollView to allow scroll of view when overflow and make view possible in Landscape mode -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <!-- Created constraint Layout to position and size widgets -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homepage1"
        android:minWidth="430dp">

        <!-- Created TextView for Heading in m page -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="237dp"
            android:layout_height="42dp"

            android:layout_marginTop="72dp"
            android:text="@string/text_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <!-- Created ImageView to show image in Main page -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="184dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/homeImage"
            android:src="@drawable/android"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.327" />

        <!-- Created Login Button which will redirect to Login Activity -->
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="36dp"
            android:text="@string/login"
            android:textColor="#800000"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <!-- Created Register Button which will redirect to Register Activity -->
        <Button
            android:id="@+id/register"
            android:layout_width="110dp"
            android:layout_height="49dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="36dp"
            android:text="@string/register"
            android:textColor="#800000"
            app:layout_constraintStart_toEndOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>